--- a/Samples/Shared/Okta.plist
+++ b/Samples/Shared/Okta.plist
@@ -3,14 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>issuer</key>
-	<string>https://{orgDomain}/oauth2/default</string>
+	<string>https://dev-44242259.okta.com/oauth2/default</string>
 	<key>clientId</key>
-	<string>{clientId}</string>
+	<string>0oafgavvs9bD1Zlst5d7</string>
 	<key>scopes</key>
 	<string>openid profile offline_access device_sso</string>
 	<key>redirectUri</key>
-	<string>{appScheme}:/callback</string>
+	<string>com.okta.dev-44242259:/callback</string>
 	<key>logoutRedirectUri</key>
-	<string>{appScheme}:/</string>
+	<string>com.okta.dev-44242259:/</string>
 </dict>
 </plist>
