--- a/Samples/WebSignIn/WebSignIn (iOS)/WebSignIn/WebSignIn.entitlements
+++ b/Samples/WebSignIn/WebSignIn (iOS)/WebSignIn/WebSignIn.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>com.okta.mobile-sdk.shared$(SAMPLE_CODE_DISAMBIGUATOR)</string>
+		<string>$(AppIdentifierPrefix)com.notmoniapps.example.okta-sample.WebSignIn</string>
 	</array>
 </dict>
 </plist>
